// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changed-listed-buildings GET /add should render the add changed listed building page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add changed listed building</span>
            <h1             class="govuk-heading-l">Changed listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="changedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="changedListedBuilding" name="changedListedBuilding" type="text" value=""
                            aria-describedby="changedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`changed-listed-buildings GET /add/check-and-confirm should render the add changed listed building check and confirm page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and add changed listed building</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Changed listed building</dt>
                    <dd class="govuk-summary-list__value"><a href="https://historicengland.org.uk/listing/the-list/list-entry/12345"
                        class="govuk-link" target="_blank">12345</a>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/lpa-questionnaire/1/changed-listed-buildings/add">Change<span class="govuk-visually-hidden"> listed building number</span></a>
                    </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Add changed listed building</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`changed-listed-buildings GET /change/:listedBuildingId should render the change listed building page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update changed listed building</span>
            <h1             class="govuk-heading-l">Changed listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="changedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="changedListedBuilding" name="changedListedBuilding" type="text" value="123456"
                            aria-describedby="changedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`changed-listed-buildings GET /change/:listedBuildingId/check-and-confirm should render the check and confirm page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and update changed listed building</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Changed listed building</dt>
                    <dd class="govuk-summary-list__value"><a href="https://historicengland.org.uk/listing/the-list/list-entry/12345"
                        class="govuk-link" target="_blank">12345</a>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/lpa-questionnaire/1/changed-listed-buildings/change/1">Change<span class="govuk-visually-hidden"> changed listed building</span></a>
                    </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Update changed listed building</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`changed-listed-buildings GET /remove/:listedBuildingId should render the remove changed listed building page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Confirm that you want to remove the changed listed building</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <p class="govuk-body"><a href="https://historicengland.org.uk/listing/the-list/list-entry/123456"
                            class="govuk-link" target="_blank">123456</a>
                        </p>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Remove changed listed building</button>
                    </form>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <p class="govuk-body"><a href="/appeals-service/appeal-details/1/lpa-questionnaire/1/changed-listed-buildings/manage"
                        class="govuk-link" target="_blank">Cancel</a>
                    </p>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`changed-listed-buildings POST /add should re-render the add changed listed building page with an error when listed building is empty 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#changed-listed-building">Provide a listed building entry list number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add changed listed building</span>
            <h1             class="govuk-heading-l">Changed listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="changedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="changedListedBuilding" name="changedListedBuilding" type="text" value=""
                            aria-describedby="changedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`changed-listed-buildings POST /change/:listedBuildingId should re-render the change listed building page when the data is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#changed-listed-building">Provide a listed building entry list number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update changed listed building</span>
            <h1             class="govuk-heading-l">Changed listed building entry number</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <div id="changedListedBuilding-hint" class="govuk-hint">This is a 7 digit number from Historic England</div>
                            <input class="govuk-input"
                            id="changedListedBuilding" name="changedListedBuilding" type="text" value="123456"
                            aria-describedby="changedListedBuilding-hint">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
